--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,3 +214,13 @@
 					position:relative;
 					margin-top: 20px;
 				}
+		/*begin mobile Media Querie*/
+		@media only screen and (max-width: 600px) {
+			.startGameText{
+				font-size:20pt;
+			}
+			#btnNewGame{
+				width:300px;
+				height:100px;
+			}
+		}
