--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,9 +45,6 @@
 					height:84px;
 					border-top:1px solid #2ed30d;
 					opacity:0;
-					
-
-
 				}
 				.startGameText{
 					color:white;
@@ -216,9 +213,18 @@
 				}
 		/*begin mobile Media Querie*/
 		@media only screen and (max-width: 600px) {
+			#contentBox{
+					width:100%;
+					height:100%;
+					background-color:none;
+					border-radius:10px;
+					margin:30px auto 0 auto;
+					text-align:center;
+				}
 			.startGameText{
 				font-size:20pt;
 			}
+
 			#btnNewGame{
 				width:300px;
 				height:100px;
