--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,7 +212,7 @@
 					margin-top: 20px;
 				}
 		/*begin mobile Media Querie*/
-		@media only screen and (max-width: 600px) {
+		/*@media only screen and (max-width: 600px) {
 			#contentBox{
 					width:100%;
 					height:100%;
@@ -229,4 +229,4 @@
 				width:300px;
 				height:100px;
 			}
-		}
+		}*/
